[package]
name = "git-message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
tui = "0.18"
crossterm = "0.23"
unicode-segmentation = "1.2"
unicode-width = "0.1"